--- a/index1.html
+++ b/index1.html
@@ -6,21 +6,21 @@
     <body>
         <script>
             function solution(a, b, c) {
-                const x = a;
-                const y = b;
-                const z = c;
+                const x = a
+                const y = b
+                const z = c
                 let result 
 
                 if(x < y && x < z){
-                     return a;
+                     return a
                 }else if(y < x && y < z){
-                     return b;
+                     return b
                 }else if(z < x && z < y){
-                     return c;
+                     return c
                 }
                 return result
             }
-            
+
             console.log(solution(6, 4, 9));
         </script>
     </body>
