--- a/index4.html
+++ b/index4.html
@@ -9,7 +9,7 @@
                 const a = x
                 let result = 0;
 
-                for (let i = 1; i % a; i++) {
+                for (let i = 1; i <= a; i++) {
                      return result = a*(a+1)/2;
                 }
                 return result
