--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Algorithm-Result</title>
+        <title>Algorithm Number 1</title>
     </head>
     <body>
         <script>
