--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Algorithm</title>
+        <title>Algorithm Number 3</title>
     </head>
     <body>
         <script>
