--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Algorithm-Result</title>
+        <title>Algorithm Number 2</title>
     </head>
     <body>
         <script>
