--- a/index5.html
+++ b/index5.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Algorithm</title>
+        <title>Algorithm Number 5</title>
     </head>
     <body>
         <script>
@@ -10,9 +10,11 @@
                 let result;
 
                 for (let i = 1; i <= a; i++) {
-                     if (a % 2 == 0){
+                     if (a % 2 == 1)
+                     {
                         return "Even Numbers"
-                     }else
+                     }
+                     else
                      {
                         return "Odd Numbers"
                      }
