--- a/index6.html
+++ b/index6.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Algorithm-Result</title>
+    <title>Algorithm Number 6</title>
   </head>
   <body>
     <script>
@@ -15,6 +15,7 @@
             return smallest;
           }
         }
+        return smallest;
       }
       console.log(solution(3, 5, 4, 0));
     </script>
