--- a/index7.html
+++ b/index7.html
@@ -5,20 +5,24 @@
   </head>
   <body>
     <script>
-     function listNum(...args) {
-            const arr = [...args];
-            let smallest = listNum[0];
-            let result = 0;
+      function listNum(...args) {
+        const arr = [...args];
+        let smallest = listNum[0];
+        let result = 0;
 
-
-            for(let i=0; i <arr.length; i++){
-                    if (arr[i] %2 !== 0) {
-                        result = result + arr[i]
-                    }
-                }
-                return result
-            }
-            console.log(listNum(12, 77, 38, 41, 53, 92, 85));
+        for (let i = 0; i < arr.length; i++) {
+          if (arr[i] % 2 !== 0) {
+            result = result + arr[i];
+          }
+          if (arr[i] <= smallest) {
+            smallest = arr[i];
+          }
+        }
+        return result;
+        return smallest;
+      }
+      console.log(listNum(12, 77, 38, 41, 53, 92, 85));
+      console.log(listNum(smallest));
     </script>
   </body>
 </html>
