--- a/index7.html
+++ b/index7.html
@@ -1,28 +1,27 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Algorithm-Result 7</title>
+    <title>Algorithm Number 7</title>
   </head>
   <body>
     <script>
-      function listNum(...args) {
+      function solution(...args) {
         const arr = [...args];
-        let smallest = listNum[0];
         let result = 0;
+        let resultSum = arr[0];
+        let smallest = arr[3];
 
         for (let i = 0; i < arr.length; i++) {
           if (arr[i] % 2 !== 0) {
             result = result + arr[i];
-          }
-          if (arr[i] <= smallest) {
-            smallest = arr[i];
+            if (arr[i] < smallest) {
+                smallest = arr[i];
+            }
           }
         }
-        return result;
-        return smallest;
+        return { result, smallest };
       }
-      console.log(listNum(12, 77, 38, 41, 53, 92, 85));
-      console.log(listNum(smallest));
+      console.log(solution(4, 77, 38, 41, 53, 92, 85, 99, 27));
     </script>
   </body>
 </html>
