--- a/index7.html
+++ b/index7.html
@@ -8,7 +8,6 @@
       function solution(...args) {
         const arr = [...args];
         let result = 0;
-        let resultSum = arr[0];
         let smallest = arr[3];
 
         for (let i = 0; i < arr.length; i++) {
@@ -19,9 +18,9 @@
             }
           }
         }
-        return { result, smallest };
+        return Array(result, smallest);
       }
-      console.log(solution(4, 77, 38, 41, 53, 92, 85, 99, 27));
+      console.log(solution(12, 77, 38, 41, 53, 92, 85));
     </script>
   </body>
 </html>
