--- a/index7.html
+++ b/index7.html
@@ -18,7 +18,9 @@
             }
           }
         }
-        return Array(result, smallest);
+        console.log(result)
+        console.log(smallest)
+        console.log(`${result} \n${smallest}`);
       }
       console.log(solution(12, 77, 38, 41, 53, 92, 85));
     </script>
