--- a/index8.html
+++ b/index8.html
@@ -6,11 +6,13 @@
   <body>
     <script>
       function solution(codeDts, carNum) {
-        const coding = [0, 7, 8]; 
+        const arr = [0, 7, 8];
         let result = 0;
 
         for (let i = 0; i < carNum.length; i++) {
-          if (coding.includes(codeDts) || carNum[i] % 100  || last2Num % 10 === codeDts) {
+          const last2Num = carNum[i] % 100;
+          const last1Num = last2Num % 10;
+          if (arr.includes(codeDts) || last1Num === codeDts) {
             result++;
           }
         }
